[package]
name = "jaime"
version = "0.3.0"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
skim = "0.9.4"
rustyline = "9.0.0"
serde_yaml = "0.8.20"
shlex = "1.1.0"
colored = "2.0.0"
clap = "3.0.0-beta.4"
dirs = "3.0.2"
anyhow = "1.0.44"
once_cell = "1.8.0"

# [dependencies.skim]
# path = "/Users/lucasburns/projects/rust/repos_example/skim"
